# payment-success-consumer

./: .gitignore  celery_app.py  main.py  pyproject.toml  run_demo.py
src/: main.py
src/config/: settings.py
src/models/: event.py  order_state.py
src/queue/: consumer.py
src/queue_consumer/: consumer.py  publisher.py
src/repository/: database.py  event_store.py  models.py  order_repository.py
src/retry/: retry_policy.py
src/services/: dispatch_client.py  payment_success_handler.py  restaurant_client.py
src/utils/: logger.py
